Day2/Ch04/cicd/kubernetes/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: bubble-pool
spec:
  replicas: 1
  strategy:
    canary:
      steps:
      - setWeight: 33
      - pause: {duration: 30}
      - setWeight: 66
      - pause: {duration: 30}
      - setWeight: 100
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: bubble-pool
  template:
    metadata:
      labels:
        app: bubble-pool
    spec:
      containers:
      - name: bubble-pool
        image: 255380800200.dkr.ecr.ap-southeast-1.amazonaws.com/skt-user02:purple
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
